do some testing; finish draft of rewrite

--- a/environment.yml
+++ b/environment.yml
@@ -8,6 +8,7 @@ dependencies:
   - ipykernel
   - numpy
   - openai
+  - requests
 
   # For openai.embeddings_utils (move above if used directly)
   - matplotlib
