show details about 9-figure coordinates
This also factors code out from ada-002.ipynb into a module,
parsing.py. Even better would be to not need that module, by using
some library to quickly and easily check how many "mantissa digits"
each coordinate's representation has (if there's a nice way).

--- a/python/Pipfile
+++ b/python/Pipfile
@@ -9,6 +9,7 @@ ipykernel = "*"
 numpy = "*"
 openai = "*"
 requests = "*"
+tabulate = "*"
 matplotlib = "*"
 pandas = "*"
 plotly = "*"
@@ -17,6 +18,9 @@ scipy = "*"
 tenacity = "*"
 
 [dev-packages]
+flake8 = "*"
+mypy = "*"
+pyright = "*"
 
 [requires]
 python_version = "3.11"
