--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -9,9 +9,7 @@ jobs:
     steps:
       - name: Check out source repository
         uses: actions/checkout@v3
-      - name: Set up Python environment
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
       - name: mypy Typecheck
         uses: jpetrucciani/mypy-check@master
+        with:
+          python_version: "3.11"
