Revert "mypy-check: temporarily(?) remove actions/checkout"
This reverts commit ef851d7c4a99e2962b97fa683e7514fbddb330cb.

My understanding was correct: I very much *do* need to do the
actions/checkout step before actions/mypy-check runs.

--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     name: Typecheck
     steps:
+      - name: Check out source repository
+        uses: actions/checkout@v3
       - name: mypy Typecheck
         uses: jpetrucciani/mypy-check@master
         with:
