--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -10,6 +10,10 @@ jobs:
     defaults:
       run:
         working-directory: ./compare
+    permissions:
+      contents: read
+      security-events: write
+      pull-requests: read
 
     steps:
     - name: Checkout repository
