--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -24,19 +24,12 @@ jobs:
       with:
         ruby-version: 3.1
 
-    # FIXME: Add to Gemfile instead of specifying it here.
-    - name: Install Code Scanning integration
-      run: bundle add code-scanning-rubocop --version 0.6.1 --skip-install
-
     - name: Install dependencies
       run: bundle install
 
     - name: Rubocop run
       run: |
-        bash -c "
-          bundle exec rubocop --require code_scanning --format CodeScanning::SarifFormatter -o rubocop.sarif
-          [[ $? -ne 2 ]]
-        "
+        bundle exec rubocop --require code_scanning --format progress --format CodeScanning::SarifFormatter -o rubocop.sarif
 
     - name: Upload Sarif output
       uses: github/codeql-action/upload-sarif@v2
