--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,6 +16,14 @@ updates:
       - dependency-type: "all"
     open-pull-requests-limit: 20
 
+  - package-ecosystem: "bundler"
+    directory: "/compare"
+    schedule:
+      interval: "weekly"
+    allow:
+      - dependency-type: "all"
+    open-pull-requests-limit: 20
+
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
