Help CodeQL find Python dependencies
This makes temporary symlinks on CI, in the repo root, to manifest files.

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -49,6 +49,10 @@ jobs:
         distribution: 'temurin'
         java-version: 19
 
+    - if: matrix.language == 'python'
+      name: Help CodeQL find dependencies
+      run: ln -st . python/Pipfile{,.lock}
+
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
