--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -50,7 +50,13 @@ jobs:
         java-version: 19
 
     - if: matrix.language == 'python'
-      name: Help CodeQL find dependencies
+      name: Set up Python environment
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+
+    - if: matrix.language == 'python'
+      name: Help CodeQL find Python dependencies
       run: ln -st . python/Pipfile{,.lock}
 
     # Initializes the CodeQL tools for scanning.
