--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -64,10 +64,10 @@ jobs:
       run: pip install -U pipenv
 
     - if: matrix.language == 'python'
-      name: Install Python dependencies
+      name: Determine Python dependencies
       run: |
         cd python
-        pipenv install
+        pipenv requirements >../requirements.txt
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
