Help CodeQL find Python dependencies (#57)
* Help CodeQL find Python dependencies

This makes temporary symlinks on CI, in the repo root, to manifest files.

* Install Python 3.11 on CI for CodeQL

* Remove symlink step (exploratory)

* Explicitly install Python dependencies

By running pipenv.

* Install tools to support explicit pipenv

* Write requirements.txt instead of installing

Then CodeQL should install the dependencies from that.

I know of no good reason this would work better than symlinking
Pipfile and Pipfile.lock, but that didn't seem to make use of the
dependencies. Maybe this will work better.

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -49,6 +49,26 @@ jobs:
         distribution: 'temurin'
         java-version: 19
 
+    - if: matrix.language == 'python'
+      name: Set up Python environment
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+
+    - if: matrix.language == 'python'
+      name: Update PyPA packages
+      run: pip install -U pip setuptools wheel
+
+    - if: matrix.language == 'python'
+      name: Install pipenv
+      run: pip install -U pipenv
+
+    - if: matrix.language == 'python'
+      name: Determine Python dependencies
+      run: |
+        cd python
+        pipenv requirements >../requirements.txt
+
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
